fix for involuntary submit on mobile

--- a/app/assets/stylesheets/signup.css.scss
+++ b/app/assets/stylesheets/signup.css.scss
@@ -17,6 +17,7 @@
 				font-size: 20px;
 				padding: 12px 10px;
 				width: 300px;
+				-webkit-appearance: none;
 			}
 			
 			input:focus {
